# neuro_collection

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  buffer_fv1.cpp  buffer_fv1.h  buffer_fv1_impl.h  config_cmake.h  dependent_neumann_boundary_fv1.cpp  dependent_neumann_boundary_fv1.h  hybrid_neuron_communicator.cpp  hybrid_neuron_communicator.h  hybrid_synapse_current_assembler.h  hybrid_synapse_current_assembler_impl.h  ip3r.cpp  ip3r.h  leak.cpp  leak.h  membrane_transport_1d.cpp  membrane_transport_1d.h  membrane_transport_fv1.cpp  membrane_transport_fv1.h  membrane_transporter_interface.cpp  membrane_transporter_interface.h  ncx.cpp  ncx.h  neuro_collection_plugin.cpp  one_sided_borg_graham_fv1.h  one_sided_borg_graham_fv1_impl.h  one_sided_membrane_transport_fv1.h  pmca.cpp  pmca.h  ryr.cpp  ryr.h  serca.cpp  serca.h  surface_marking.cpp  surface_marking.h  (+6 more)
.github/workflows/: codeql-analysis.yml
data/: test_1d.ugx
grid_generation/: bouton_generator.cpp  bouton_generator.h  dendrite_generator.cpp  dendrite_generator.h  neurites_from_swc.cpp  neurites_from_swc.h  polygonal_mesh_from_txt.cpp  polygonal_mesh_from_txt.h  spine_generation.cpp  spine_generation.h
grid_generation/bouton_generator/: bouton_generator.cpp  bouton_generator.h
membrane_transporters/: hh.cpp  hh.h  hh_charges.cpp  hh_charges.h  hh_species.cpp  hh_species.h  ip3r.cpp  ip3r.h  leak.cpp  leak.h  leakage_ohmic.cpp  leakage_ohmic.h  mcu.cpp  mcu.h  membrane_transporter_interface.cpp  membrane_transporter_interface.h  mncx.cpp  mncx.h  ncx.cpp  ncx.h  nmdar.cpp  nmdar.h  pmca.cpp  pmca.h  ryr.cpp  ryr.h  ryr2.cpp  ryr2.h  ryr_discrete.cpp  ryr_discrete.h  ryr_implicit.cpp  ryr_implicit.h  ryr_implicit_impl.h  ryr_instat.cpp  ryr_instat.h  ryr_linearized.cpp  ryr_linearized.h  ryr_linearized_impl.h  serca.cpp  serca.h  (+3 more)
membrane_transporters/vdcc_bg/: vdcc_bg.cpp  vdcc_bg.h  vdcc_bg_cableneuron.cpp  vdcc_bg_cableneuron.h  vdcc_bg_impl.h  vdcc_bg_neuron.cpp  vdcc_bg_neuron.h  vdcc_bg_userdata.cpp  vdcc_bg_userdata.h  vdcc_bg_vm2ug.cpp  vdcc_bg_vm2ug.h
stimulation/: action_potential_train.cpp  action_potential_train.h
test/: consistency_util.h  consistency_util_impl.cpp  neurite_grid_generation.h  neurite_grid_generation_impl.cpp  neurite_math_util.h  neurite_math_util_impl.cpp  neurite_refMarkAdjuster.cpp  neurite_refMarkAdjuster.h  neurite_runtime_error.h  neurite_util.h  neurite_util_impl.cpp  qhull.cpp  quickhull.cpp  test_neurite_proj.cpp  test_neurite_proj.h  tetrahedralize_util.cpp  tetrahedralize_util.h  types.h
unit_tests/: fixtures.cpp  tests.cpp
util/: axon_util.cpp  axon_util.h  ca_wave_util.h  ca_wave_util_impl.h  hh_util.cpp  hh_util.h  mapping_attachment_copy_handler.cpp  mapping_attachment_copy_handler.h  measurement.h  measurement_impl.h  misc_util.cpp  misc_util.h  misc_util_impl.h  neurite_axial_refinement_marker.cpp  neurite_axial_refinement_marker.h  solution_impexp_util.h  solution_impexp_util_impl.h  vr_util.h  vr_util_impl.cpp
